refactor: security hardening, perf fixes & email verification
- Remove hardcoded credentials from application.yml (use env vars)
- Add application-local.yml for local dev (gitignored)
- Fix CORS: replace wildcard with ALLOWED_ORIGINS env var
- Move changePassword logic from Controller to AuthService
- Fix N+1 query in suggestRecipes (bulk fetch with JOIN FETCH)
- Add DELETE /fridge bulk-clear endpoint (replaces N sequential calls)
- Add email verification flow on registration (OTP via email)
- Add welcome email after successful verification
- Auto-verify Google OAuth users
- Add emailVerified field to User entity
- New: EmailVerificationToken entity + repository
- Update MailService with SmartFridge branding + new email templates
- Add WRONG_PASSWORD, EMAIL_NOT_VERIFIED error codes
- Clean up Lombok in Recipe.java (remove redundant @Getter @Setter)
- Rename app name smart-recipe -> smart-fridge in application.yml